--- a/recon.config
+++ b/recon.config
@@ -1,4 +1,4 @@
-REPLACE WITH HUNTER.IO EMAIL
-REPLACE WITH HUNTER.IO PASSWORD
-REPLACE WITH POPPINGBOXES.ORG USERNAME
-REPLACE WITH POPPINGBOXES.ORG PASSWORD
+Hunter.io email: 
+Hunter.io password: 
+poppingboxes.org username: 
+poppingboxes.org password: 
