--- a/recon.config
+++ b/recon.config
@@ -1,4 +1,6 @@
-Hunter.io email: 
-Hunter.io password: 
-poppingboxes.org username: 
-poppingboxes.org password: 
+Replace this line with hunter.io email
+Replace this line with hunter.io password
+Replace this line with poppingboxes.org username
+Replace this line with poppingboxes.org password
+Replace this line with geckodriver.exe path, '.\' optional.  Example: .\recon_folder\geckodriver.exe
+Replace this line with selenium path. DO NOT put a '.\' at beggining.  Example: recon_folder\selenium
