--- a/recon.config
+++ b/recon.config
@@ -1,6 +1,5 @@
-Replace this line with hunter.io email
-Replace this line with hunter.io password
-Replace this line with poppingboxes.org username
-Replace this line with poppingboxes.org password
-Replace this line with geckodriver.exe path, '.\' optional.  Example: .\recon_folder\geckodriver.exe
-Replace this line with selenium path. DO NOT put a '.\' at beggining.  Example: recon_folder\selenium
+Hunter email = 
+Hunter password = 
+PoppingBoxes username = 
+PoppingBoxes password = 
+Geckodriver Location = 
